
skulls-x230 0.1.7 - unreleased
---------------------------------------
This release includes the following changes:
* update coreboot-sdk to version d70f5fae1c

skulls-x230 0.1.6 - released 2019-06-07
---------------------------------------
This release includes the following changes:
* based on coreboot commit 555419f356
  (parent in master branch 55c5777170)
* simplified and improved scripts:
  * before_first_install.sh is included in x230_skulls.sh
  * upgrade.sh is now x230_skulls.sh -U
  * only the executable scripts are in the top directory

skulls-x230 0.1.5 - released 2019-05-02
---------------------------------------
This release includes the following changes:
* based on coreboot commit 139b3cef03
  (parent in master branch d32a493091)
* update SeaBIOS to version 1.12.1

skulls-x230 0.1.4 - released 2019-05-02
---------------------------------------
This release includes the following changes:
* Fixed chip detection for "external" scripts

skulls-x230 0.1.3 - released 2019-04-03
---------------------------------------
This release includes the following changes:
* based on coreboot commit 8f0576f420
  (parent in master branch 622a28d22b)
* update Intel's microcode revision from 0x20 to 0x21

skulls-x230 0.1.2 - released 2019-03-08
---------------------------------------
This release includes the following changes:
* based on coreboot commit 9276fe4089
* update coreboot-sdk to version 1.53
* increase RPi spi speed for flashing
* add -d option to me_cleaner

skulls-x230 0.1.1 - released 2019-01-18
---------------------------------------
This release includes the following changes:
* based on coreboot commit cd97982e2e
* updates and bugfixes in the scripts
* bootsplash logo added to the nonfree image

skulls-x230 0.1.0 - released 2018-12-19
---------------------------------------
This release includes the following changes:
* based on coreboot commit 2ca2acc51f
  (parent in master branch 47d6663bba)
* add an optional second image that includes SeaVGABIOS
